--- a/WishList/Views/Item/Create.cshtml
+++ b/WishList/Views/Item/Create.cshtml
@@ -5,7 +5,7 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h3>Add item to wishlist.</h3>
+<h3>Add item to wishlist</h3>
 
 <form asp-action = "create" method="post">
     <input asp-for="Description" />
