--- a/WishList/Views/Item/Create.cshtml
+++ b/WishList/Views/Item/Create.cshtml
@@ -9,6 +9,6 @@
 
 <form asp-action="create">
     <input asp-for="Description" />
-    <span asp-validation-for="Description" />
-    <button type="submit">Add Item</button>
-</form>
+    <span asp-validation-for="Description"></span>
+    <button type="submit">Add item</button>
+</form> 
